style.css
body {
	background: #fff;
    color: #616161;
	font: 14px 'Open Sans', Helvetica, Arial, sans-serif;
	line-height: 1.4;
	margin: 0 0;
	margin-bottom: 100px;
    text-align:center;
}
em {
	color: #999;
}
p {
	line-height: 1.6;
	font-size: 90%;
}

a {
	color: #2C85B1;
	text-decoration: none;
	font-weight: 400;
}
ul {
	margin-bottom: 0;
}
section {
	margin: 1em 0 1em;
}
blockquote {
	margin: 0;
	margin-bottom: 1em;
}
#resume {
    width: 80%;
    margin: 0 auto;
	max-width: 760px;
    text-align: left;
}

/* Resume heading */
.heading header { 
    display: inline-block;
    width: 49.5%;
}

.heading header h1 {
	font-size: 220%;
	margin: 0.5em 0;
	font-weight: 600;
}

.heading header h2 {
	font-size: 140%;
	margin: 0;
	margin: 0 1em 0 0;
}

.contact-wrapper {
    text-align: justify;
    display: inline-block;
    width: 49.5%;
}

.profile {
	display: inline-block;
	margin: 0;
}

.profile strong,
.profile span {
	display: inline-block;
	margin: 0;
}
/* section / line breaks */
section h2 {
	font-size: 130%;
    letter-spacing: 0.06em;
	margin: 0 0 0.5em;
	text-transform: uppercase;
	color: #BC1B39;
	font-weight: 400;
}

/* Experience items */
.item {
	margin: 0 0 0.5em 1em;
	padding: 0 0 1em;
	border-bottom: 1px dotted #FAE9EC;
}

.item:last-child {
	border-bottom: none;
}

.item header {
    display: inline-block;
}

.item header h3 {
	margin: 0 0 0.2em 0;
	display: inline-block;
	font-weight: 600;
    font-size: 120%;
}

.item header a {
	display: inline-block;
}

.item .position {
    display: block;
	font-weight: 400;
	font-size: 100%;
    font-style: italic;
}

.detail:not(:last-child):after,
.profile:not(:last-child):after {
    content: "\00b7";
    margin: 0 0.5em 0 0.5em;
}

.separator {
    margin: 0 0.5em 0 0.5em;
}

.separator::after {
    content: "\00b7";
}

.date {
    float:right;
}

.date .startDate,
.date .endDateAppendedText,
.date .endDate {
	color: #6B6B6B;
    font-weight: 200;
}

.date .endDateAppendedText {
    font-style: italic;
}

.item .date {
    display: inline-block;
}

.item .summary p {
    margin: 0.5em 0;
}

.item .projectsSummary p {
    margin: 0;
    font-style: italic;
}

.item .specificFields {
    margin-left: 0.5em;
    width: 95%;
}

.item .subHeader {
    margin-top: 0.25em;
}

.item .subHeader p {
    display: inline-block;
    margin: 0;
}

.item .subHeaderTitle {
    display: inline-block;
    font-weight: 600;
}

.item .whatIDid {
    font-weight: 600;
    margin: 0;
}

.item .highlights {
    margin-top: 0;
	list-style: circle inside;
	font-size: 90%;
    width: 80%;
    padding-left: 3em;
    text-indent: -2em;
}

/* projects */
.projectSubtitle p {
    font-style: italic;
    margin-bottom: 1em;
}

/* skills */
#skills .item {
	margin: 0.5em 0;
	padding: 0 0 0.5em;
	font-size: 90%;
}

#skills .item .name {
	font-weight: 600;
	display: inline-block;
	text-transform: uppercase;
	margin: 0 1em 0 0;
	width: 23%;
	vertical-align: top;
}

#skills .item .keywords {
	display: inline-block;
	width: 70%;
	vertical-align: top;
}

.qualification {
    font-style: italic;
}

/* print settings */

@media print {

    body {
        color: black;
    }

    .date {
        color: black;
    }

}

